--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,10 +13,10 @@
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484121.md#1" title="程晓农：中共的现金外汇储备行将见底""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/03/gettyimages-1013061576-594x594-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484237.md#1" title="大陆3季度粮价上涨 玉米每吨价格创4年新高""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/06/1906082300411528-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://kdoobq3732.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12485050.md#1">中共为何强行火化他们的遗体（15）</a><br>
+:clock8: <em>49分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12485050.md#1">中共为何强行火化他们的遗体（15）</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12483177.md#1">美国对中产阶级最好和最糟的十个州</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484807.md#1">【役情最前线】王岐山命运难料 新林彪事件恐现</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/6/n12455916.md#1">运动后吃对修复肌肉、改善疲劳 营养师推3食谱</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/6/n12455916.md#1">运动后吃对修复肌肉、改善疲劳 营养师推3食谱</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/9/29/n12439663.md#1">提早发育会长不高吗？孩子性早熟有4个原因</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12485086.md#1">朱利安尼：拜登儿子抱怨 钱财与老爹分半</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
@@ -31,18 +31,18 @@
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482193.md#1">前生意伙伴举报亨特 游说拜登白宫见中企官员</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482279.md#1">内斗激烈 中共能源局副局长落马</a><br>
 <br><p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
+<a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12483848.md#1">田云：电脑门发酵 拜登竞选经理自曝民调不实</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/14/n12474852.md#1">【内幕】吉林省应对美中贸易战措施曝光</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/9/21/n12420009.md#1">【思想领袖】史密斯：关乎美国未来的战斗</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12480826.md#1">【名家专栏】警惕社媒审查 核实新闻来源</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/14/n12473966.md#1">【独家】中共“融媒体”洗脑宣传法曝光</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/15/n12479119.md#1">【独家】朱利安尼：如何鉴定拜登腐败材料</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/15/n12477779.md#1">【内幕】洛阳理工爆群体肺结核 当局隐瞒</a><br>
-<a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/14/n12474159.md#1">【名家专栏】掌控教育篡改历史 左派要毁美国</a><br>
 <br><p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,785,504 人
+!共 365,786,561 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
