--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/15/n11045840.md#1" target="_blank">晓明：1968年广西阳朔杀惨案回顾</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/5/n11367520.md#1" target="_blank">响彻在世界政坛的正义之声（中）</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/1/n10353384.md#1" target="_blank">郑恩宠：中国打压 招安律师与林昭精神</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/16/n10718504.md#1" target="_blank">这些患绝症的精英们何以逢生（4）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
