--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/1/n9793368.md#1" target="_blank">你不了解的邓小平：与毛一同指挥大跃进（上）</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/22/n10994483.md#1" target="_blank">红斑狼疮病苦十年 她偶遇一纸“心灵药单”</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/2/n9799674.md#1" target="_blank">刘晓：被中共打造的“革命母亲”杨沫</a></li><li><a href="https://github.com/kdoobq3732/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/21/n2972092.md#1" target="_blank">修炼者的心声：请支持正义良知  选择美好未来</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
