--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -122,7 +122,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/29/n9782865.md#1" target="_blank">你不了解的邓小平：反右运动总指挥（上）</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/20/n11466682.md#1" target="_blank">患脑瘤等死 中共总参工程师炼法轮功后痊愈</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/11/n10134371.md#1" target="_blank">中共反对提倡“礼义廉耻”的新生活运动</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/30/n10884257.md#1" target="_blank">美国会CECC吁川习会关注法轮功受迫害</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
