--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -122,7 +122,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/11/n10134371.md#1" target="_blank">中共反对提倡“礼义廉耻”的新生活运动</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/30/n10884257.md#1" target="_blank">美国会CECC吁川习会关注法轮功受迫害</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/13/n10711496.md#1" target="_blank">共产暴政录：喊错口号导致六千人被杀</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/11/10/n3726603.md#1" target="_blank">【历史回顾】羊城晚报：老少皆炼法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
