--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484121.md#1" title="程晓农：中共的现金外汇储备行将见底""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/03/gettyimages-1013061576-594x594-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484237.md#1" title="大陆3季度粮价上涨 玉米每吨价格创4年新高""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/06/1906082300411528-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://kdoobq3732.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/19/n12485360.md#1">保护伞餐厅遭泼秽物停业一周 台警方拘捕四人</a><br>
-:clock8: <em>37分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12485042.md#1">陈坤准时为周迅庆生 连续11年从未中断</a><br>
-:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12485182.md#1">拜登竞选阵营警告支持者：川普仍可胜选</a><br>
-:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482137.md#1">【最新疫情10.19】美南部州经济复苏快</a><br>
+:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/19/n12485360.md#1">保护伞餐厅遭泼秽物停业一周 台警方拘捕四人</a><br>
+:clock8: <em>57分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12485042.md#1">陈坤准时为周迅庆生 连续11年从未中断</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12485182.md#1">拜登竞选阵营警告支持者：川普仍可胜选</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482137.md#1">【最新疫情10.19】美南部州经济复苏快</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12485050.md#1">中共为何强行火化他们的遗体（15）</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12483177.md#1">美国对中产阶级最好和最糟的十个州</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12483177.md#1">美国对中产阶级最好和最糟的十个州</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482129.md#1">赵立坚诬蔑美军播毒论令川普愤怒至极</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482636.md#1">大陆二手房市场分化严重 房地产泡沫要破？</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,788,873 人
+!共 365,790,850 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -114,10 +114,10 @@
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/8/n12460942.md#1">【独家】揭秘大陆敢言网络大V凋零过程</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/8/n12462796.md#1">【独家】公函泄疫情爆发比中共公布早数月</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/3/n12449829.md#1">【独家】“五毛”变网评员 补贴翻了多倍</a><br>
-<br><p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/14/n12475632.md#1">吕洞宾说因果：拒色戒淫 上天感应降福报</a><br>
+<br><p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/8/6/n12310590.md#1">【医案】人间有味是清欢</a><br>
+<a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/14/n12475632.md#1">吕洞宾说因果：拒色戒淫 上天感应降福报</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/9/17/n12411954.md#1">东西方地狱见闻 邪淫者的悲声</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12480127.md#1">英国的企业家精神和美学品味</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/2/n12446499.md#1">高贵的人格 超凡的勇气——记人权律师高智晟（上）</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/10/n12467270.md#1">【成吉思汗】建大蒙古国 封功臣 扩怯薛军</a><br>
-<a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/8/14/n12329604.md#1">华盛顿将军系列故事：肝胆相照锻造谷</a><br>
 <br><p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/kdoobq3732/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kdoobq3732/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nf1351518.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kdoobq3732/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/kdoobq3732/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
