--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -122,31 +122,31 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045158.md#1" target="_blank">《苦菜花》人物原型的真实人生（1）</a></li><li><a href="https://github.com/kdoobq3732/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（下）</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/31/n11757068.md#1" target="_blank">王友群：面对“八国联军”清军为何兵败如山倒</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/29/n10097243.md#1" target="_blank">大学教授炼法轮功身心受益 反迫害控告江泽民</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/14/n12474369.md#1">日本出现“UFO空战”画面 多个追赶一个</a></li>
-<li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12479879.md#1">曾预言川普当选 传教士：上帝派天使助连任</a></li>
-<li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/9/3/n12378281.md#1">【西安事变?蒋宋夫妇】天降神谕 使命之行</a></li>
-<li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/9/30/n12440550.md#1">《圣经》与《推背图》预言的应验与变换1</a></li>
-<li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/9/26/n12433135.md#1">济公袈裟罩山 古井运木</a></li>
-<li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12480830.md#1">【重播】川普威斯康星州演讲 支持执法机构</a></li>
-<li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12483231.md#1">【珍言真语】桑普：习近平南巡 上演障眼法</a></li>
-<li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/9/21/n12420009.md#1">【思想领袖】史密斯：关乎美国未来的战斗</a></li>
-<li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12480488.md#1">不愿拉人陪葬！台联结车驾驶猝死前用尽力气自撞</a></li>
-<li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12479897.md#1">成都大学校长书记内斗 书记死亡官微禁言</a></li>
-<li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12480422.md#1">宝特瓶当水壶 10岁女童皮肤流汤、月经提早来</a></li>
-<li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/15/n12479059.md#1">58岁梁朝伟近照曝光 苍老容貌惊呆网友</a></li>
-<li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12481456.md#1">刘诗诗自曝不愿上综艺 个中原因令人吃惊</a></li>
-<li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12481895.md#1">传周星驰重金续约林允 为对赌协议添保障</a></li>
-<li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/15/n12479366.md#1">章子怡当裁缝剪T恤 亲自秀模特各式穿搭</a></li>
-<li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482595.md#1">TWICE定延心理不安 暂不参与正规二辑等活动</a></li>
-<li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12480422.md#1">宝特瓶当水壶 10岁女童皮肤流汤、月经提早来</a></li>
-<li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12479879.md#1">曾预言川普当选 传教士：上帝派天使助连任</a></li>
-<li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/15/n12478565.md#1">耳鸣70%有自律神经失调！5招改善耳鸣耳聋</a></li>
-<li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12481545.md#1">自制3杯天然运动饮料 提升免疫力、改善疲劳</a></li>
-<li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12480185.md#1">11天连飞1.2万公里 几百克重小鸟创世界纪录</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/14/n12474369.md#1">日本出现“UFO空战”画面 多个追赶一个</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12479879.md#1">曾预言川普当选 传教士：上帝派天使助连任</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/9/30/n12440550.md#1">《圣经》与《推背图》预言的应验与变换1</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/9/3/n12378281.md#1">【西安事变?蒋宋夫妇】天降神谕 使命之行</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/9/26/n12433135.md#1">济公袈裟罩山 古井运木</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482835.md#1">【十字路口】拜登家再爆通共门 中共渗透联合国</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482472.md#1">【拍案惊奇】拜登家族通共？习为何突然回京</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12483231.md#1">【珍言真语】桑普：习近平南巡 上演障眼法</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481651.md#1">【新闻看点】习突返京或3原因 拜登家丑闻连爆</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482129.md#1">赵立坚诬蔑美军播毒论令川普愤怒至极</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482636.md#1">大陆二手房市场分化严重 房地产泡沫要破？</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481456.md#1">刘诗诗自曝不愿上综艺 个中原因令人吃惊</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481895.md#1">传周星驰重金续约林允 为对赌协议添保障</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/15/n12479366.md#1">章子怡当裁缝剪T恤 亲自秀模特各式穿搭</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482595.md#1">TWICE定延心理不安 暂不参与正规二辑等活动</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484792.md#1">洪金宝拄拐杖近照曝光 网民惊讶</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12480422.md#1">宝特瓶当水壶 10岁女童皮肤流汤、月经提早来</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12479879.md#1">曾预言川普当选 传教士：上帝派天使助连任</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481545.md#1">自制3杯天然运动饮料 提升免疫力、改善疲劳</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12480185.md#1">11天连飞1.2万公里 几百克重小鸟创世界纪录</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481202.md#1">换季流鼻水、皮肤痒？过敏自救有一套</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kdoobq3732/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kdoobq3732/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/17/n12482137.htm">【最新疫情10.19】美南部州经济复苏快</a></p><hr>
